Fix map/menu overlap issues

--- a/app/js/oscar/theme/default/style.css
+++ b/app/js/oscar/theme/default/style.css
@@ -210,6 +210,7 @@ div.olMap {
 
 div.olMapViewport {
 	text-align: left;
+  z-index:10;
 }
 
 div.olLayerDiv {
